# remember-me-backend

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml  remember_me.db
remember_me_backend/: __main__.py  app.py
remember_me_backend/api/: __init__.py  dependencies.py  router_chat_sessions.py
remember_me_backend/api/schemas/: session.py
remember_me_backend/core/: __init__.py  config.py  security.py
remember_me_backend/models/: __init__.py  base.py  chat_session.py  user.py
remember_me_backend/services/: chat_session.py  session_service.py
tests/: conftest.py  factory.py
tests/api/: test_router_chat_sessions.py
tests/services/: test_chat_session.py
