[project]
name = "remember-me-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.11",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest-asyncio==0.25.3",
    "ruff>=0.9.9",
    "sqlalchemy==2.0.40",
    "typer==0.15.2",
    "mixer==7.2.2",
    "asyncpg==0.30.0",
    "greenlet==3.1.1",
]

[tool.ruff.lint.per-file-ignores]
"remember_me_backend/**/__init__.py" = [
  "F401", # pyflakes - unused-import
]

"remember_me_backend/__init__.py" = [
  "E402", # Module level import not at top of file
]
    
[project.scripts]
remember-me = "remember_me_backend.__main__:app"
